add timing with clock (not quite working yet)

--- a/timing_with_clock.ipynb
+++ b/timing_with_clock.ipynb
@@ -2,27 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the timings (HH:MM:SS) taken for each question starting from the total time (e.g., 01:15:00):\n",
-      "\n"
+      "\n",
+      "You have 74.83 minutes extra time remaining.\n",
+      "Cannot add 100.00 minutes because it exceeds the remaining extra time of 74.83 minutes.\n",
+      "Added 50.00 minutes to question 1. Remaining extra time: 24.83 minutes.\n",
+      "Cannot add 50.00 minutes because it exceeds the remaining extra time of 24.83 minutes.\n",
+      "Cannot add 50.00 minutes because it exceeds the remaining extra time of 24.83 minutes.\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
+     "evalue": "could not convert string to float: ''",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 52\u001b[0m\n\u001b[0;32m     49\u001b[0m num_questions \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the number of questions: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m# Step 3: Input timings for each question\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m timings \u001b[38;5;241m=\u001b[39m \u001b[43minput_timings\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_questions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     54\u001b[0m \u001b[38;5;66;03m# Step 4: Analyze the timings\u001b[39;00m\n\u001b[0;32m     55\u001b[0m analysis_df \u001b[38;5;241m=\u001b[39m analyze_timings(timings, total_time)\n",
-      "Cell \u001b[1;32mIn[6], line 17\u001b[0m, in \u001b[0;36minput_timings\u001b[1;34m(num_questions)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(time_str\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m)) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     16\u001b[0m     h, s \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m---> 17\u001b[0m     m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtime_str\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m     h, m, s \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, time_str\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "Cell \u001b[1;32mIn[2], line 68\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m extra_time \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     67\u001b[0m     question_number \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the question number you want to add time to: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m---> 68\u001b[0m     add_time \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEnter the amount of time (in minutes) to add to this question: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m add_time \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m extra_time:\n\u001b[0;32m     71\u001b[0m         extra_time \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m add_time\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
    ],
@@ -31,33 +34,36 @@
     "from datetime import timedelta\n",
     "import json\n",
     "import os\n",
+    "import time\n",
     "\n",
-    "def input_timings(num_questions):\n",
+    "def input_timings(num_questions, total_time_remaining):\n",
     "    timings = []\n",
-    "    print(\"Enter the timings (HH:MM:SS) taken for each question starting from the total time (e.g., 01:15:00):\")\n",
+    "    h, m, s = map(int, total_time_remaining.split(':'))\n",
+    "    time_remaining = timedelta(hours=h, minutes=m, seconds=s)\n",
+    "\n",
+    "    input(\"Press Enter to start the timing for the first question.\")\n",
+    "    start_time = time.time()  # Start the initial timing\n",
+    "\n",
     "    for i in range(num_questions):\n",
-    "        time_str = input(f\"Time remaining after question {i+1} (HH:MM:SS): \")\n",
-    "        print(time_str)\n",
-    "        if len(time_str.split(':')) == 2:\n",
-    "            h = 0\n",
-    "            m, s = map(int, time_str.split(':'))\n",
-    "        elif len(time_str.split(':')) == 1:\n",
-    "            h, s = 0, 0\n",
-    "            m = int(time_str)\n",
-    "        else:\n",
-    "            h, m, s = map(int, time_str.split(':'))\n",
-    "        time_remaining = timedelta(hours=h, minutes=m, seconds=s)\n",
+    "        input(f\"Press Enter after completing question {i+1}\")\n",
+    "        end_time = time.time()\n",
+    "\n",
+    "        time_taken = end_time - start_time\n",
+    "        time_remaining -= timedelta(seconds=time_taken)\n",
+    "\n",
     "        timings.append(time_remaining)\n",
     "\n",
-    "        if time_remaining.total_seconds() == 0:\n",
-    "            # add the rest of the questions with 0 time\n",
+    "        if time_remaining.total_seconds() <= 0:\n",
+    "            # add the rest of the questions with 0 time remaining\n",
     "            timings.extend(timedelta(seconds=0) for _ in range(i+1, num_questions))\n",
     "            break\n",
-    "        \n",
+    "\n",
+    "        start_time = end_time  # Automatically start timing for the next question\n",
+    "\n",
     "    return timings\n",
     "\n",
-    "def analyze_timings(timings, total_time):\n",
-    "    total_time_delta = timedelta(minutes=int(total_time))\n",
+    "def analyse_timings(timings, total_time):\n",
+    "    total_time_delta = timedelta(hours=int(total_time.split(\":\")[0]), minutes=int(total_time.split(\":\")[1]), seconds=int(total_time.split(\":\")[2]))\n",
     "    data = {\n",
     "        'Question': list(range(1, len(timings) + 1)),\n",
     "        'Time Remaining': timings,\n",
@@ -74,14 +80,14 @@
     "    return f\"{hours:02}:{minutes:02}:{seconds:02}\"\n",
     "\n",
     "paper_name = input(\"Enter the name of the paper: \")\n",
-    "total_time = input(\"Enter the total time available for the paper (in minutes): \")  # total time for the paper in minutes\n",
+    "total_time = input(\"Enter the total time available for the paper (HH:MM:SS): \")  # total time for the paper in HH:MM:SS format\n",
     "num_questions = int(input(\"Enter the number of questions: \"))\n",
     "\n",
     "# Step 3: Input timings for each question\n",
-    "timings = input_timings(num_questions)\n",
+    "timings = input_timings(num_questions, total_time)\n",
     "\n",
     "# Step 4: Analyze the timings\n",
-    "analysis_df = analyze_timings(timings, total_time)\n",
+    "analysis_df = analyse_timings(timings, total_time)\n",
     "\n",
     "# Step 5: Check for extra time and distribute it\n",
     "last_time_remaining = analysis_df['Time Remaining'].iloc[-1]\n",
@@ -95,9 +101,8 @@
     "        \n",
     "        if add_time <= extra_time:\n",
     "            extra_time -= add_time\n",
-    "            analysis_df.at[question_number - 1, 'Time Spent on Question'] = format_timedelta(\n",
-    "                timedelta(minutes=(timedelta(minutes=float(analysis_df.at[question_number - 1, 'Time Spent on Question'].split(':')[0])).total_seconds() / 60) + add_time)\n",
-    "            )\n",
+    "            time_spent = timedelta(seconds=(timedelta(minutes=add_time).total_seconds() + pd.to_timedelta(analysis_df.at[question_number - 1, 'Time Spent on Question']).total_seconds()))\n",
+    "            analysis_df.at[question_number - 1, 'Time Spent on Question'] = format_timedelta(time_spent)\n",
     "            print(f\"Added {add_time:.2f} minutes to question {question_number}. Remaining extra time: {extra_time:.2f} minutes.\")\n",
     "        else:\n",
     "            print(f\"Cannot add {add_time:.2f} minutes because it exceeds the remaining extra time of {extra_time:.2f} minutes.\")\n",
