--- a/study_stats.ipynb
+++ b/study_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        " 'tf568u77npfuf3l63d75qd11rv74l2lt@import.calendar.google.com': '🇺🇸 United States | Paris 2024'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
     "        \"Computer Science\": [\"computer science\", \"comp sci\", \"cs nea\", \"csc\"],\n",
     "        \"Physics\": [\"physics\", \"phys\"],\n",
     "        \"EPQ\": [\"epq\"],\n",
-    "        \"TMUA\": [\"TMUA\", \"tmua\"],\n",
+    "        \"TMUA\": [\"tmua\"],\n",
     "        \"Project Euler\": [\"project euler\"],\n",
     "        \"Medium\": [\"medium\"],\n",
     "    }\n",
@@ -127,8 +127,9 @@
     "        duration = (end - start).total_seconds() / 3600  # Convert to hours\n",
     "        total_study_time += duration\n",
     "\n",
-    "        summary = event.get(\"summary\", \"\").lower()  # Convert to lowercase\n",
+    "        summary = event.get(\"summary\", \"\")\n",
     "\n",
+    "        # print(f\"{start.strftime('%Y-%m-%d %H:%M')} - {end.strftime('%Y-%m-%d %H:%M')}: {summary} ({duration:.1f} hrs)\")\n",
     "        for subject, terms in subjects.items():\n",
     "            for term in terms:\n",
     "                if term.lower() in summary.lower():\n",
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
