made calculate average hours since date function more efficient in terms of api calls

--- a/study_stats.ipynb
+++ b/study_stats.ipynb
@@ -361,8 +361,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime as dt\n",
-    "\n",
     "def calculate_average_hours_since_date(service, calendar_id, subject, subjects, given_date):\n",
     "    local_timezone = dt.datetime.now(dt.timezone.utc).astimezone().tzinfo\n",
     "    now = dt.datetime.now(tz=local_timezone)\n",
@@ -370,21 +368,46 @@
     "    # Calculate the number of days since the given date\n",
     "    delta_days = (now.date() - given_date.date()).days + 1  # Include the given_date itself\n",
     "\n",
-    "    # Initialize lists to store the hours for each day\n",
-    "    daily_hours = []\n",
-    "    _dates = [now - dt.timedelta(days=x) for x in range(delta_days - 1, -1, -1)]\n",
+    "    # Fetch all events in the range of given_date to now in one API call\n",
+    "    start_of_given_date = given_date.replace(hour=0, minute=0, second=0, microsecond=0, tzinfo=local_timezone).isoformat()\n",
+    "    now_iso = now.isoformat()\n",
     "\n",
-    "    for _date in _dates:\n",
-    "        if _date.date() == now.date():\n",
-    "            hours = get_studying_hours_completed_today(service, calendar_id)\n",
-    "        else:\n",
-    "            hours = fetch_daily_subject_hours(service, calendar_id, subject, subjects, _date)\n",
-    "            \n",
-    "        daily_hours.append(hours)\n",
+    "    try:\n",
+    "        events_result = service.events().list(\n",
+    "            calendarId=calendar_id,\n",
+    "            timeMin=start_of_given_date,\n",
+    "            timeMax=now_iso,\n",
+    "            singleEvents=True,\n",
+    "            orderBy=\"startTime\",\n",
+    "            maxResults=10000\n",
+    "        ).execute()\n",
+    "    except HttpError as error:\n",
+    "        print(f\"An error occurred: {error}\")\n",
+    "        return 0\n",
+    "\n",
+    "    events = events_result.get('items', [])\n",
+    "    total_hours = 0\n",
+    "\n",
+    "    if subject not in subjects:\n",
+    "        print(f\"Subject '{subject}' not recognized.\")\n",
+    "        return 0\n",
+    "\n",
+    "    terms = subjects[subject]\n",
+    "\n",
+    "    # Process each event only once\n",
+    "    for event in events:\n",
+    "        summary = event.get(\"summary\", \"\").lower()\n",
+    "        if any(term.lower() in summary for term in terms):\n",
+    "            start = event['start'].get('dateTime', event['start'].get('date'))\n",
+    "            end = event['end'].get('dateTime', event['end'].get('date'))\n",
+    "            start_time = dt.datetime.fromisoformat(start).astimezone(local_timezone)\n",
+    "            end_time = dt.datetime.fromisoformat(end).astimezone(local_timezone)\n",
+    "            duration = (end_time - start_time).total_seconds() / 3600  # Convert duration to hours\n",
+    "            total_hours += duration\n",
     "\n",
     "    # Calculate average hours since the given date\n",
-    "    average_hours = sum(daily_hours) / delta_days\n",
-    "    print(f\"Average studying hours since {given_date.strftime('%b %d, %Y')}: {average_hours:.1f} hours\")\n",
+    "    average_hours = total_hours / delta_days\n",
+    "    print(f\"Average studying hours for '{subject}' since {given_date.strftime('%b %d, %Y')}: {average_hours:.1f} hours\")\n",
     "\n",
     "    return average_hours\n"
    ]
