--- a/study_stats.ipynb
+++ b/study_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -664,16 +664,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total studying hours completed today: 3.0 hours\n",
-      "Average studying hours since May 25, 2024: 0.9 hours\n",
-      "0.8630268199233717\n"
+      "Average studying hours for 'TMUA' since May 25, 2024: 1.2 hours\n",
+      "1.1561302681992338\n"
      ]
     }
    ],
