fixed print statements

--- a/study_stats.ipynb
+++ b/study_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,6 @@
     "            duration = end_time - start_time\n",
     "            total_hours += duration.total_seconds() / 3600\n",
     "\n",
-    "    print(f\"Total studying hours completed today: {total_hours:.1f} hours\")\n",
     "    return total_hours\n",
     "\n",
     "\n",
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +287,7 @@
     "    planned_hours_today = get_all_studying_hours_today(service, calendar_id)\n",
     "    completed_hours_today = get_studying_hours_completed_today(service, calendar_id)\n",
     "    percentage_completed = (completed_hours_today / planned_hours_today) * 100\n",
+    "    print(f\"Total studying hours completed today: {completed_hours_today:.1f} hours\")\n",
     "    print(f\"Percentage of planned studying hours completed today: {round(percentage_completed)}%\")\n",
     "\n",
     "    # Today's progress\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,6 @@
       "Total studying hours scheduled for today: 5.5 hours\n",
       "Total studying hours completed today: 2.8 hours\n",
       "Percentage of planned studying hours completed today: 50%\n",
-      "Total studying hours completed today: 2.8 hours\n",
       "Average studying hours over the last month: 1.7 hours\n",
       "Average studying hours over the last week: 3.5 hours\n"
      ]
@@ -723,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
