--- a/todays_studying.ipynb
+++ b/todays_studying.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pytz'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdt\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpytz\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgoogleapiclient\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01merrors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HttpError\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mauthenticate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m authenticate_google_calendar \n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pytz'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime as dt\n",
     "import pytz\n",
@@ -108,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,26 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total studying hours scheduled for today: 4.8 hours\n",
-      "Total studying hours completed today: 0.0 hours\n"
+      "No events found for today.\n",
+      "No events found for today.\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "'studying.xlsx'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'NoneType' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m planned_hours_today \u001b[38;5;241m=\u001b[39m get_all_studying_hours_today(service, calendar_id)\n\u001b[1;32m     12\u001b[0m completed_hours_today \u001b[38;5;241m=\u001b[39m get_studying_hours_completed_today(service, calendar_id)\n\u001b[0;32m---> 13\u001b[0m remaining_hours_today \u001b[38;5;241m=\u001b[39m \u001b[43mplanned_hours_today\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcompleted_hours_today\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Average calculations\u001b[39;00m\n\u001b[1;32m     16\u001b[0m average_hours_month \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(daily_hours_month) \u001b[38;5;241m/\u001b[39m monthly_days\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'NoneType' and 'int'"
+     ]
     }
    ],
    "source": [
@@ -364,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -378,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
