update subject specific function chart title

--- a/study_stats.ipynb
+++ b/study_stats.ipynb
@@ -423,7 +423,7 @@
     "    )\n",
     "    plt.xlabel('Hours Studied')\n",
     "    plt.ylabel('Date')\n",
-    "    plt.title(f'{subject} Hours Over the Last Month')\n",
+    "    plt.title(f'{subject if subject else 'All'} Hours Over the Last Month')\n",
     "    plt.axvline(\n",
     "        x=average_hours_month,\n",
     "        color='green',\n",
