--- a/study_stats.ipynb
+++ b/study_stats.ipynb
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "run-cell",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,8 @@
     "    \"EPQ\": [\"epq\"],\n",
     "    \"TMUA\": [\"tmua\"],\n",
     "    \"Project Euler\": [\"project euler\"],\n",
-    "    \"Articles\": [\"medium\", \"article\", \"blog\"]\n",
+    "    \"Articles\": [\"medium\", \"article\", \"blog\"],\n",
+    "    \"STAT\": [\"stat revision\"]\n",
     "}\n",
     "\n",
     "service = authenticate_google_calendar()\n",
