--- a/study_stats.ipynb
+++ b/study_stats.ipynb
@@ -505,10 +505,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "id": "plot-daily-subject-month",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'else' statement on line 28 (1148998499.py, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[155], line 30\u001b[0;36m\u001b[0m\n\u001b[0;31m    plt.figure(figsize=(10, 10))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'else' statement on line 28\n"
+     ]
+    }
+   ],
    "source": [
     "def plot_daily_subject_study_time_last_month(service, calendar_ids, subject, subjects):\n",
     "    \"\"\"\n",
@@ -537,6 +546,9 @@
     "    if subject:\n",
     "        print(f\"Average {subject} study time over the last month: {average_hours_month:.1f} hours\")\n",
     "        print(f\"Average {subject} study time over the last week: {average_hours_week:.1f} hours\")\n",
+    "    else:\n",
+    "        print(f\"Average study time over the last month: {average_hours_month:.1f} hours\")\n",
+    "        print(f\"Average study time over the last week: {average_hours_week:.1f} hours\")\n",
     "\n",
     "    plt.figure(figsize=(10, 10))\n",
     "    plt.barh([date.strftime(\"%b %d\") for date in dates_month], daily_hours_month, color=\"skyblue\")\n",
